[gd_scene format=3 uid="uid://dxikjpq2durx0"]

[ext_resource type="Script" uid="uid://blqrewm86hfjx" path="res://screens/game_scenes/template_level/components/nivel.gd" id="1_746gp"]
[ext_resource type="Script" uid="uid://x0qole3ha7y6" path="res://screens/game_scenes/template_level/components/layer.gd" id="2_3eck2"]
[ext_resource type="PackedScene" uid="uid://cxtgkwjdb1ow8" path="res://scenes/sound/sfx.tscn" id="2_bqir4"]
[ext_resource type="Script" uid="uid://ps2ayfxa8vhk" path="res://screens/game_scenes/template_level/components/mask_cutout.gd" id="3_7w6s3"]
[ext_resource type="Script" uid="uid://c3ihr86jc3lsg" path="res://screens/game_scenes/template_level/components/preview.gd" id="4_hkp1i"]
[ext_resource type="Texture2D" uid="uid://csbttg3e4garl" path="res://screens/game_scenes/template_level/components/fondo_canvas_1.png" id="4_tr3vn"]
[ext_resource type="Script" uid="uid://b7ec55y6i7i60" path="res://screens/game_scenes/template_level/components/game_elements.gd" id="5_3eck2"]
[ext_resource type="Script" uid="uid://b5b6vrre3kog" path="res://screens/game_scenes/template_level/components/reset_button.gd" id="5_tr3vn"]
[ext_resource type="Script" uid="uid://caaqgeb6rfnfv" path="res://screens/game_scenes/template_level/components/mask.gd" id="6_bqir4"]
[ext_resource type="Script" uid="uid://chflmo6al3wyn" path="res://screens/game_scenes/template_level/components/mask_cut_out_for_animation.gd" id="7_cubxh"]
[ext_resource type="Script" uid="uid://b3628p8i1q0mi" path="res://scenes/mask_selection/mask_selection.gd" id="7_pub7v"]
[ext_resource type="Script" uid="uid://cfbw02l2ukjxt" path="res://screens/game_scenes/template_level/components/sub_viewport.gd" id="8_cubxh"]
[ext_resource type="Texture2D" uid="uid://qge5rog7jtpb" path="res://screens/game_scenes/template_level/components/fondo_canvas_2.png" id="9_bqir4"]
[ext_resource type="Texture2D" uid="uid://bhdxrwqmibvw0" path="res://screens/game_scenes/template_level/components/fondo.jpg" id="12_pub7v"]

[sub_resource type="Gradient" id="Gradient_0npbb"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kjhe3"]
gradient = SubResource("Gradient_0npbb")
width = 400
height = 400

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jg18i"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_x4ba3"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dg2up"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_pub7v"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y5ptm"]
light_mode = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_y5ptm"]
viewport_path = NodePath("CanvasLayer/SubViewportContainer/MaskSubviewport")

[sub_resource type="Gradient" id="Gradient_y5ptm"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2br0v"]
gradient = SubResource("Gradient_y5ptm")
width = 160
height = 128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n54bx"]
size = Vector2(160, 128)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_n54bx"]
light_mode = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_n54bx"]
viewport_path = NodePath("CanvasLayer2/SubViewportContainer/LayerSubviewport")

[sub_resource type="Gradient" id="Gradient_n54bx"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gvio3"]
gradient = SubResource("Gradient_n54bx")
width = 160
height = 128

[sub_resource type="Gradient" id="Gradient_2m1qm"]
offsets = PackedFloat32Array(0.58709675)
colors = PackedColorArray(0.5294118, 0.5294118, 1, 0.6862745)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dg2up"]
gradient = SubResource("Gradient_2m1qm")
width = 160
height = 128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2m1qm"]
size = Vector2(160, 128)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pub7v"]
load_path = "res://.godot/imported/fondo.jpg-a33336dc9cf7cfc4f4a6abb7633b7059.ctex"

[sub_resource type="ViewportTexture" id="ViewportTexture_pub7v"]
viewport_path = NodePath("CanvasLayer/SubViewportContainer/MaskSubviewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2br0v"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 0.827451)

[node name="Nivel" type="Node2D" unique_id=868727410 groups=["level"]]
physics_interpolation_mode = 1
script = ExtResource("1_746gp")
mask_size = Vector2i(300, 150)
canvas_size = Vector2i(768, 960)
metadata/_edit_lock_ = true

[node name="sfx" parent="." unique_id=403339373 instance=ExtResource("2_bqir4")]
unique_name_in_owner = true

[node name="fuh" parent="sfx" index="4" unique_id=1723191634]
bus = &"Master"

[node name="UI" type="CanvasLayer" parent="." unique_id=2113149104]

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=902006675]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer" unique_id=210780470]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="MaskButton" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=1551359140]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
text = "Aplicar MÃ¡scara"

[node name="ResetButton" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=916187850]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
text = "Resetear"
script = ExtResource("5_tr3vn")

[node name="Layer" type="Node2D" parent="." unique_id=105627276 groups=["layer"]]
unique_name_in_owner = true
position = Vector2(60, 60)
script = ExtResource("2_3eck2")
metadata/_edit_lock_ = true

[node name="LayerBackground3" type="Sprite2D" parent="Layer" unique_id=1182094189]
unique_name_in_owner = true
modulate = Color(0.6583396, 0.6583401, 0.65833956, 1)
position = Vector2(-22, 2)
rotation = 0.010471975
texture = ExtResource("4_tr3vn")
centered = false
metadata/_edit_lock_ = true

[node name="LayerBackground2" type="Sprite2D" parent="Layer" unique_id=1727705017]
unique_name_in_owner = true
modulate = Color(0.851769, 0.8517689, 0.85176885, 1)
position = Vector2(-3, -16.000004)
rotation = 0.03490658
texture = ExtResource("4_tr3vn")
centered = false
metadata/_edit_lock_ = true

[node name="LayerBackground" type="Sprite2D" parent="Layer" unique_id=284435309]
unique_name_in_owner = true
texture = ExtResource("4_tr3vn")
centered = false
metadata/_edit_lock_ = true

[node name="MaskCutOut" type="Sprite2D" parent="Layer" unique_id=717492432]
unique_name_in_owner = true
clip_children = 1
texture = SubResource("GradientTexture2D_kjhe3")
centered = false
region_enabled = true
script = ExtResource("3_7w6s3")
metadata/_edit_lock_ = true

[node name="MaskBackground" type="Sprite2D" parent="Layer/MaskCutOut" unique_id=1819708292]
centered = false
metadata/_edit_lock_ = true

[node name="ScenarioBorders" type="StaticBody2D" parent="Layer" unique_id=1346561349]
collision_layer = 2147483648
collision_mask = 0
metadata/_edit_lock_ = true

[node name="Bottom" type="CollisionShape2D" parent="Layer/ScenarioBorders" unique_id=1852634940]
position = Vector2(768, 960)
shape = SubResource("WorldBoundaryShape2D_jg18i")
metadata/_edit_lock_ = true

[node name="Top" type="CollisionShape2D" parent="Layer/ScenarioBorders" unique_id=1366978323]
shape = SubResource("WorldBoundaryShape2D_x4ba3")
metadata/_edit_lock_ = true

[node name="Right" type="CollisionShape2D" parent="Layer/ScenarioBorders" unique_id=1225438628]
position = Vector2(768, 960)
shape = SubResource("WorldBoundaryShape2D_dg2up")
metadata/_edit_lock_ = true

[node name="Left" type="CollisionShape2D" parent="Layer/ScenarioBorders" unique_id=1856295708]
position = Vector2(1, 485.5)
rotation = 1.5707964
shape = SubResource("WorldBoundaryShape2D_pub7v")
metadata/_edit_lock_ = true

[node name="Preview" type="Sprite2D" parent="Layer" unique_id=1110395595]
unique_name_in_owner = true
light_mask = 2
z_index = 5
material = SubResource("CanvasItemMaterial_y5ptm")
texture = SubResource("ViewportTexture_y5ptm")
centered = false
metadata/_edit_lock_ = true

[node name="PreviewMask" type="PointLight2D" parent="Layer" unique_id=2374421]
unique_name_in_owner = true
process_mode = 1
z_index = 100
position = Vector2(193, 141)
energy = 0.0
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_2br0v")
script = ExtResource("4_hkp1i")
mask_size = Vector2i(300, 150)
metadata/_edit_lock_ = true

[node name="PreviewArea" type="Area2D" parent="Layer/PreviewMask" unique_id=1272415802]
unique_name_in_owner = true
collision_layer = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Layer/PreviewMask/PreviewArea" unique_id=2096837403]
shape = SubResource("RectangleShape2D_n54bx")
metadata/_edit_lock_ = true

[node name="GameElements" type="Node2D" parent="Layer" unique_id=645795038]
script = ExtResource("5_3eck2")
metadata/_edit_lock_ = true

[node name="Mask" type="Node2D" parent="." unique_id=384021872]
unique_name_in_owner = true
position = Vector2(1084, 60)
script = ExtResource("6_bqir4")
metadata/_edit_lock_ = true

[node name="MaskBackground2" type="Sprite2D" parent="Mask" unique_id=290333682]
unique_name_in_owner = true
modulate = Color(0.851769, 0.8517689, 0.85176885, 1)
position = Vector2(-10, -3)
rotation = -0.017453292
texture = ExtResource("9_bqir4")
centered = false
metadata/_edit_lock_ = true

[node name="MaskBackground" type="Sprite2D" parent="Mask" unique_id=218631811]
unique_name_in_owner = true
texture = ExtResource("9_bqir4")
centered = false
metadata/_edit_lock_ = true

[node name="LayerPreview" type="Sprite2D" parent="Mask" unique_id=1890886365]
unique_name_in_owner = true
light_mask = 2
z_index = 1
material = SubResource("CanvasItemMaterial_n54bx")
texture = SubResource("ViewportTexture_n54bx")
centered = false
metadata/_edit_lock_ = true

[node name="LayerPreviewMask" type="PointLight2D" parent="Mask" unique_id=202915104]
unique_name_in_owner = true
energy = 0.0
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_gvio3")
metadata/_edit_lock_ = true

[node name="MaskSelection" type="Node2D" parent="Mask" unique_id=2110519118]
unique_name_in_owner = true
z_index = 1
position = Vector2(226, 146)
script = ExtResource("7_pub7v")
mask_size = Vector2i(300, 150)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Mask/MaskSelection" unique_id=26579043]
visibility_layer = 2
texture = SubResource("GradientTexture2D_dg2up")
metadata/_edit_lock_ = true

[node name="MaskSelectionArea" type="Area2D" parent="Mask/MaskSelection" unique_id=1565263904]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mask/MaskSelection/MaskSelectionArea" unique_id=2010712115]
shape = SubResource("RectangleShape2D_2m1qm")
metadata/_edit_lock_ = true

[node name="GameElements" type="Node2D" parent="Mask" unique_id=1295757892]
script = ExtResource("5_3eck2")
metadata/_edit_lock_ = true

[node name="MaskHole" type="Sprite2D" parent="." unique_id=751834744]
unique_name_in_owner = true
clip_children = 1
visibility_layer = 2
z_index = 200
texture = SubResource("GradientTexture2D_kjhe3")
centered = false
region_enabled = true
metadata/_edit_lock_ = true

[node name="FondoTexture" type="Sprite2D" parent="MaskHole" unique_id=7921866]
scale = Vector2(1.7284344, 1.7284346)
texture = SubResource("CompressedTexture2D_pub7v")
centered = false

[node name="MaskCutOutForAnimation" type="Sprite2D" parent="." unique_id=1193114252]
unique_name_in_owner = true
process_mode = 3
clip_children = 1
visibility_layer = 2
z_index = 250
position = Vector2(60, 60)
texture = SubResource("GradientTexture2D_kjhe3")
centered = false
region_enabled = true
script = ExtResource("7_cubxh")

[node name="MaskBackground" type="Sprite2D" parent="MaskCutOutForAnimation" unique_id=943261374]
texture = SubResource("ViewportTexture_pub7v")
centered = false
metadata/_edit_lock_ = true

[node name="sfx" parent="MaskCutOutForAnimation" unique_id=1210593573 instance=ExtResource("2_bqir4")]

[node name="fuh" parent="MaskCutOutForAnimation/sfx" index="4" unique_id=1723191634]
bus = &"Master"

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1770220679]
layer = -2

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer" unique_id=1640880484]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -552.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MaskSubviewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer" unique_id=844272332 node_paths=PackedStringArray("camera", "canvas")]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918721
size = Vector2i(768, 960)
render_target_update_mode = 4
script = ExtResource("8_cubxh")
camera = NodePath("MaskCamera")
canvas = NodePath("../../../Mask")

[node name="MaskCamera" type="Camera2D" parent="CanvasLayer/SubViewportContainer/MaskSubviewport" unique_id=2107362031]
unique_name_in_owner = true
rotation = 0.2617994
offset = Vector2(1084, 60)
anchor_mode = 0
ignore_rotation = false
metadata/_edit_lock_ = true

[node name="CanvasLayer2" type="CanvasLayer" parent="." unique_id=349716207]
layer = -2

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer2" unique_id=1951153838]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -552.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="LayerSubviewport" type="SubViewport" parent="CanvasLayer2/SubViewportContainer" unique_id=48825315 node_paths=PackedStringArray("camera", "canvas")]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(768, 960)
render_target_update_mode = 4
script = ExtResource("8_cubxh")
camera = NodePath("LayerCamera")
canvas = NodePath("../../../Layer")

[node name="LayerCamera" type="Camera2D" parent="CanvasLayer2/SubViewportContainer/LayerSubviewport" unique_id=816684468]
unique_name_in_owner = true
offset = Vector2(60, 60)
anchor_mode = 0
ignore_rotation = false
metadata/_edit_lock_ = true

[node name="ganaste" type="RichTextLabel" parent="." unique_id=214663392]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 643.0
offset_top = 500.0
offset_right = 1456.5
offset_bottom = 670.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2br0v")
bbcode_enabled = true
text = "[font_size=100][rainbow]FELICITACIONES[/rainbow][/font_size]
[center]...mas juego proximamente[/center]"
metadata/_edit_lock_ = true

[node name="Debug" type="CanvasLayer" parent="." unique_id=1166123670]

[node name="Fondo" type="CanvasLayer" parent="." unique_id=1355953562]
layer = -1

[node name="Fondo" type="TextureRect" parent="Fondo" unique_id=1046836254]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_pub7v")
metadata/_edit_lock_ = true

[editable path="sfx"]
[editable path="MaskCutOutForAnimation/sfx"]
